# smart-fan

./: .gitignore  CMakeLists.txt  flake.nix  partitions.csv
main/: CMakeLists.txt  main.c  settings.h
main/ota/: ota.c  ota.h
main/persistence/: persistence.c  persistence.h
main/server/: server.c  server.h
main/wifi/: wifi.c  wifi.h
